...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="utc-hG-dan" secondAttribute="bottom" id="70i-2D-BwI"/>
                            <constraint firstItem="utc-hG-dan" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="GvR-AD-IQ0"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="utc-hG-dan" secondAttribute="trailing" id="QtN-pk-vhf"/>
                            <constraint firstItem="utc-hG-dan" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="d5s-MM-wYd"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Flicker Search" id="cu9-Yu-W4y"/>
                    <connections>
                        <outlet property="collectionView" destination="utc-hG-dan" id="B2e-Hy-9us"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
...
